--- a/README.yaml
+++ b/README.yaml
@@ -7,6 +7,17 @@
 # Name of this project
 name: terraform-aws-efs
 
+# Tags of this project
+tags:
+  - aws
+  - terraform
+  - networking
+  - efs
+
+# Categories of this project
+categories:
+  - terraform-networking
+
 # Logo for this project
 #logo: docs/logo.png
 
