--- a/README.yaml
+++ b/README.yaml
@@ -13,10 +13,11 @@ tags:
   - terraform
   - networking
   - efs
+  - nfs
 
 # Categories of this project
 categories:
-  - terraform-networking
+  - terraform-modules/networking
 
 # Logo for this project
 #logo: docs/logo.png
