--- a/README.yaml
+++ b/README.yaml
@@ -7,6 +7,19 @@
 # Name of this project
 name: terraform-aws-efs
 
+# Tags of this project
+tags:
+  - aws
+  - terraform
+  - terraform-modules
+  - networking
+  - efs
+  - nfs
+
+# Categories of this project
+categories:
+  - terraform-modules/networking
+
 # Logo for this project
 #logo: docs/logo.png
 
