--- a/README.yaml
+++ b/README.yaml
@@ -48,6 +48,7 @@ related:
   - name: "terraform-aws-efs-cloudwatch-sns-alarms"
     description: "Terraform module that configures CloudWatch SNS alerts for EFS"
     url: "https://github.com/cloudposse/terraform-aws-efs-cloudwatch-sns-alarms"
+
 # Short description of this project
 description: |-
   Terraform module to provision an AWS [`EFS`](https://aws.amazon.com/efs/) Network File System.
@@ -59,14 +60,14 @@ usage: |-
   ```hcl
   module "efs" {
     source     = "git::https://github.com/cloudposse/terraform-aws-efs.git?ref=master"
-    namespace  = "global"
-    name       = "app"
+    namespace  = "eg"
     stage      = "prod"
+    name       = "app"
     attributes = ["efs"]
 
     aws_region         = "${var.aws_region}"
     vpc_id             = "${var.vpc_id}"
-    subnets            = "${var.private_subnets}"
+    subnets            = ["${var.private_subnets}"]
     availability_zones = ["${var.availability_zones}"]
     security_groups    = ["${var.security_group_id}"]
 
@@ -80,6 +81,8 @@ include:
 
 # Contributors to this project
 contributors:
+  - name: "Erik Osterman"
+    github: "osterman"
   - name: "Igor Rodionov"
     github: "goruha"
   - name: "Andriy Knysh"
@@ -88,3 +91,5 @@ contributors:
     github: "s2504s"
   - name: "Mike Eirih"
     github: "maokomioko"
+  - name: "Josh Myers"
+    github: "joshmyers"
