--- a/README.yaml
+++ b/README.yaml
@@ -90,3 +90,5 @@ contributors:
     github: "maokomioko"
   - name: "Josh Myers"
     github: "joshmyers"
+  - name: "Federico Márquez"
+    github: "fedemzcor
