--- a/README.yaml
+++ b/README.yaml
@@ -47,7 +47,9 @@ usage: |-
 
   ```hcl
   module "efs" {
-    source     = "git::https://github.com/cloudposse/terraform-aws-efs.git?ref=master"
+    source = "cloudposse/efs/aws"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
 
     namespace          = "eg"
     stage              = "test"
