Use security group 4.0

--- a/README.yaml
+++ b/README.yaml
@@ -51,14 +51,15 @@ usage: |-
     # Cloud Posse recommends pinning every module to a specific version
     # version     = "x.x.x"
 
-    namespace          = "eg"
-    stage              = "test"
-    name               = "app"
-    region             = "us-west-1"
-    vpc_id             = var.vpc_id
-    subnets            = var.private_subnets
-    security_groups    = [var.security_group_id]
-    zone_id            = var.aws_route53_dns_zone_id
+    namespace = "eg"
+    stage     = "test"
+    name      = "app"
+    region    = "us-west-1"
+    vpc_id    = var.vpc_id
+    subnets   = var.private_subnets
+    zone_id   = var.aws_route53_dns_zone_id
+
+    allowed_security_group_ids = [var.security_group_id]
   }
   ```
 
@@ -80,3 +81,7 @@ contributors:
     github: "maokomioko"
   - name: "Josh Myers"
     github: "joshmyers"
+  - name: "Vladimir Syromyatnikov"
+    github: "SweetOps"
+  - name: "RB"
+    github: "nitrocode"
