Feat: Use Security Group 4.x Module (#94)
* bugfix: secondary_gids ignored in acces point creation

* Auto Format

* fix format

* Add efs_backup_policy_enabled

* Add aws_efs_backup_policy

* Auto Format

* Make posix_user and creation_info optional in aws_efs_access_point

* Auto Format

* Add support for argument availability_zone_name

The AWS Availability Zone in which to create the file system. Used to
create a file system that uses One Zone storage classes.

* Skip bridgecrew check BC_AWS_GENERAL_48

Skipping as backup plan can be added via https://github.com/cloudposse/terraform-aws-backup

* Update availability_zone_name description

Add note about providing a single subnet in the same AZ when setting
this argument

* chore: readme updates

* Add transition_to_primary_storage_class

* Add transition_to_primary_storage_class

* Auto Format

* Add transition_to_primary_storage_class to test

* Revert "Update context.tf from origin source (#87)"

This reverts commit a7b950033ea112c326b687ce3c5d3c815b558868.

* Revert "feat: use security-group module instead of resource (#79)"

This reverts commit 2652b410be3ff1ba77ffbad9c3eeaaba6f0323a9.

* Use security group 4.0

* Change secondary_gids to list

* Auto Format

* Use a local for secondary_gids

* Update main.tf

* Correct posix users type

* Change transition_* to empty strings

* Auto Format

* Change transition_* to default to empty string

* Update main.tf

* Split on comma

* Update main.tf

* Update main.tf

* Update main.tf

* Auto Format

* Simplify true : false statement

* Use security_group_name instead of suffix

* Convert transition vars to list(string)

* Set security_group_create_before_destroy to true

* Auto Format

* docs: Convert transition vars to list(string)

* Convert zone_id to a list

* docs: Convert zone_id to a list

* Auto Format

* Add more to the access_points var description

* posix_

--- a/README.yaml
+++ b/README.yaml
@@ -41,6 +41,9 @@ related:
 # Short description of this project
 description: |-
   Terraform module to provision an AWS [`EFS`](https://aws.amazon.com/efs/) Network File System.
+
+  **NOTE**: Release `0.32.0` contains breaking changes. To preserve the SG, follow the instructions in the [0.30.1 to 0.32.x+ migration path](./docs/migration-0.30.1-0.32.x+.md).
+
 # How to use this project
 usage: |-
   Include this repository as a module in your existing terraform code:
@@ -51,14 +54,15 @@ usage: |-
     # Cloud Posse recommends pinning every module to a specific version
     # version     = "x.x.x"
 
-    namespace       = "eg"
-    stage           = "test"
-    name            = "app"
-    region          = "us-west-1"
-    vpc_id          = var.vpc_id
-    subnets         = var.private_subnets
-    security_groups = [var.security_group_id]
-    zone_id         = var.aws_route53_dns_zone_id
+    namespace = "eg"
+    stage     = "test"
+    name      = "app"
+    region    = "us-west-1"
+    vpc_id    = var.vpc_id
+    subnets   = var.private_subnets
+    zone_id   = [var.aws_route53_dns_zone_id]
+
+    allowed_security_group_ids = [var.security_group_id]
   }
   ```
 
@@ -82,3 +86,5 @@ contributors:
     github: "joshmyers"
   - name: "Vladimir Syromyatnikov"
     github: "SweetOps"
+  - name: "RB"
+    github: "nitrocode"
