--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,4 +4,4 @@ repository:
   name: terraform-aws-efs
   description: Terraform Module to define an EFS Filesystem (aka NFS)
   homepage: https://cloudposse.com/accelerate
-  topics: ""
+  topics: terraform, terraform-modules, efs, aws, nfs, hcl2
